// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gridlines component renders horizontal gridlines 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-gridlines bottom"
      fill="none"
      font-family="sans-serif"
      font-size="10"
      style="color: rgb(211, 211, 211); stroke-opacity: 0.8; stroke-width: 1; pointer-events: none;"
      text-anchor="middle"
    >
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(97.5,0)"
      >
        <line
          stroke="currentColor"
          y2="-430"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(194.5,0)"
      >
        <line
          stroke="currentColor"
          y2="-430"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(291.5,0)"
      >
        <line
          stroke="currentColor"
          y2="-430"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(388.5,0)"
      >
        <line
          stroke="currentColor"
          y2="-430"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(485.5,0)"
      >
        <line
          stroke="currentColor"
          y2="-430"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(582.5,0)"
      >
        <line
          stroke="currentColor"
          y2="-430"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(679.5,0)"
      >
        <line
          stroke="currentColor"
          y2="-430"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(776.5,0)"
      >
        <line
          stroke="currentColor"
          y2="-430"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(873.5,0)"
      >
        <line
          stroke="currentColor"
          y2="-430"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(970.5,0)"
      >
        <line
          stroke="currentColor"
          y2="-430"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="3"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Gridlines component renders vertical gridlines 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-gridlines left"
      fill="none"
      font-family="sans-serif"
      font-size="10"
      style="color: rgb(211, 211, 211); stroke-opacity: 0.8; stroke-width: 1; pointer-events: none;"
      text-anchor="end"
    >
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(0,43.5)"
      >
        <line
          stroke="currentColor"
          x2="970"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(0,86.5)"
      >
        <line
          stroke="currentColor"
          x2="970"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(0,129.5)"
      >
        <line
          stroke="currentColor"
          x2="970"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(0,172.5)"
      >
        <line
          stroke="currentColor"
          x2="970"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(0,215.5)"
      >
        <line
          stroke="currentColor"
          x2="970"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(0,258.5)"
      >
        <line
          stroke="currentColor"
          x2="970"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(0,301.5)"
      >
        <line
          stroke="currentColor"
          x2="970"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(0,344.5)"
      >
        <line
          stroke="currentColor"
          x2="970"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(0,387.5)"
      >
        <line
          stroke="currentColor"
          x2="970"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
      <g
        class="tick"
        opacity="0.000001"
        transform="translate(0,430.5)"
      >
        <line
          stroke="currentColor"
          x2="970"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-3"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;
